<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <include layout="@layout/navigation_bar"/>


        <Button
            android:id="@+id/startGameBtn"
            android:layout_width="match_parent"
            android:layout_height="117dp"
            android:text="@string/start"
            android:layout_marginHorizontal="10dp"/>
    <TextView
        android:id="@+id/difficultyHeader"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:fontFamily="@font/rashfeng"
        android:textColor="@android:color/black"
        android:text="@string/difficulty"
        />

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginHorizontal="10dp">

                <Button
                    android:id="@+id/easyBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/easy" />

                <Button
                    android:id="@+id/normalBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/normal" />

                <Button
                    android:id="@+id/hardBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/hard" />
            </LinearLayout>
    <TextView
        android:id="@+id/categoryHeader"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:fontFamily="@font/rashfeng"
        android:textColor="@android:color/black"
        android:text="@string/category"
        />
    <ListView
        android:id="@+id/categoriesList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:choiceMode="singleChoice"
        android:listSelector="@drawable/back_chosen">
    </ListView>
</LinearLayout>
