<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_marginHorizontal="5dp"
    android:layout_marginBottom="30dp">

        <TextView
            android:id="@+id/gameLogo"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="50sp"
            android:textStyle="bold"
            android:fontFamily="@font/rashfeng"
            android:layout_weight="2"
            android:textColor="@android:color/black"
            android:text="@string/app_name" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">

        <TextView
            android:id="@+id/highScoreNav"
            android:layout_width="127dp"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="start"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:background="@drawable/back"
            android:text="@string/high_score" />

        <TextView
            android:id="@+id/gameNav"
            android:layout_width="127dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:background="@drawable/back"
            android:text="@string/game" />

        <TextView
            android:id="@+id/profileNav"
            android:layout_width="129dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="end"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:background="@drawable/back"
            android:text="@string/profile" />
        </RelativeLayout>

</LinearLayout>